--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ header {
   padding: 2%;
   align-items: center;
   background-color: #d2c4df;
+  box-shadow: 1px 6px 8px #B2B9BA
   
 }
 
@@ -33,6 +34,11 @@ nav {
 a {
   text-decoration: none;
   color: #544f59;
+  transition: color 7;
+}
+
+a:hover {
+  color: #B06CE0;
 }
 
 .navbar {
@@ -51,12 +57,15 @@ body {
 #sobre {
   display: flex;
   margin-top: 3%;
+  padding: 5%;
 }
 
 .left-about {
   margin-left: 12%;
   margin-right: 10%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
 
 }
 
@@ -81,12 +90,26 @@ p {
   margin-top: 1%;
 }
 
+.contact-icon {
+  display: flex;
+  max-width: 50%;
+  margin-top: 6%;
+  justify-content: space-around; 
+}
+
 .right-about {
   margin-left: 20%;
 }
 
-img {
-  max-width: 70%;
+.img-icon {
+  max-width: 80%;
+  max-height: 70%;  
+  border-radius: 10%;  
+  box-shadow: 1px 1px 5px 3px #B2B9BA
+}
+
+.icon-social {
+  max-width: 80%;
   max-height: 70%;  
   border-radius: 10%;  
 }
