--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
   justify-content: space-around;
   padding: 2%;
   align-items: center;
-  background: rgba(210, 196, 223, 0.81);
+  background: var(--second-color);
   border-radius: 16px;
   backdrop-filter: blur(0.3px);
   -webkit-backdrop-filter: blur(0.3px);
@@ -27,7 +27,7 @@ header {
   font-size: 35px;
   text-decoration: none;
   font-weight: bold;
-  color: #544f59;
+  color: var(--nav-letter-color);
 }
 
 nav {
@@ -39,27 +39,27 @@ nav {
 
 a {
   text-decoration: none;
-  color: #544f59;
+  color: var(--nav-letter-color);
   transition: color 7;
 }
 
 a:hover {
-  color: #B06CE0;
+  color: var(--third-color);
 }
 
-.navbar {
+.nav-list {
   display: flex;
 }
 
-.navbar li {
+.nav-list li {
   margin-left: 5%;
 }
 
 body {
-  background: rgb(210,196,223);
-background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69%, rgba(210,196,223,1) 96%);
+  background: rgb(241,240,243);
+background: linear-gradient(0deg, rgba(241,240,243,1) 64%, rgba(210,196,223,1) 96%);
   width: 100%;
-  
+  overflow-x: hidden
 }
 
 #resume {
@@ -77,7 +77,7 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
 .little-text {
   font-family: "Cormorant Garamond", serif;
   font-size: 27px;
-  color:#a035ec;
+  color:var(--third-color-darker);
   font-weight: bold;
 }
 
@@ -139,8 +139,8 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
   max-width: 80%;
   max-height: 70%;  
   border-radius: 10%;  
-  box-shadow:  -12px -12px 24px #bababa,
-             12px 12px 24px #ffffff;
+  box-shadow:  -12px -12px 24px var(--img-shadow-first),
+             12px 12px 24px var(--img-shadow-second);
 }
 
 .icon-social {
@@ -157,22 +157,22 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
   padding: 3vw;
   width: 80vw;
   border-radius: 2vw;
-  background-color: white; 
+  background-color: var(--bg-content-color); 
   transition: all 0.5s;
 }
 
 #about:hover {
   cursor: pointer;
-  box-shadow: 14px 14px 23px #cacaca,
-  -14px -14px 23px #f6f6f6;
+  box-shadow: 14px 14px 23px var(--boxshadow-color-first),
+  -14px -14px 23px var(--boxshadow-color-second);
 }
 
-.title-about {
+.title-content {
   font-size: 38px;
   font-weight: 700;
   align-items: center;
   padding-left: 8%;
-  color:#B06CE0
+  color:var(--third-color);
 }
 
 .p-about {
@@ -191,23 +191,16 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
   padding: 3vw;
   width: 80vw;
   border-radius: 2vw;
-  background-color: white; 
+  background-color: var(--bg-content-color); 
   transition: all 0.5s;
 }
 
 #skills:hover {
   cursor: pointer;
-  box-shadow: 14px 14px 23px #cacaca,
-  -14px -14px 23px #f6f6f6;
+  box-shadow: 14px 14px 23px var(--boxshadow-color-first),
+  -14px -14px 23px var(--boxshadow-color-second);
 }
 
-.title-skills {
-  font-size: 38px;
-  font-weight: 700;
-  align-items: center;
-  padding-left: 8%;
-  color:#B06CE0;
-}
 
 .sub-title {
   padding-left: 8%;
@@ -240,7 +233,7 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
 }
 
 .content-item:hover {
-  color: #9932e2;
+  color: var(--third-color-darker);
 }
 
 .svg {
@@ -266,22 +259,14 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
   padding: 3vw;
   width: 80vw;
   border-radius: 2vw;
-  background-color: white; 
+  background-color: var(--bg-content-color); 
   transition: all 0.5s;
 }
 
 #projetos:hover {
   cursor: pointer;
-  box-shadow: 14px 14px 23px #cacaca,
-  -14px -14px 23px #f6f6f6;
-}
-
-.title-project {
-  font-size: 38px;
-  font-weight: 700;
-  align-items: center;
-  padding-left: 7%;
-  color:#B06CE0
+  box-shadow: 14px 14px 23px var(--boxshadow-color-first),
+  -14px -14px 23px var(--boxshadow-color-second);
 }
 
 .projeto-calc {
@@ -290,7 +275,7 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
   margin-top: 2%;
   margin-left: 7vh;
   border-radius: 20%;
-  background-color: #eaeaead5;
+  background-color: var(--first-color);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -298,7 +283,7 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
 }
 
 .projeto-calc:hover {
-  box-shadow:  7px 7px 14px #dcc5ecee, -7px -7px 14px #f6f6f6;
+  box-shadow:  7px 7px 14px #dcc5ecee, -7px -7px 14px var(--boxshadow-color-second);
   cursor: pointer;
 }
 
@@ -328,9 +313,9 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
 }
 
 .projeto-calc a {
-  background-color: #B06CE0;
+  background-color: var(--third-color);
   border-radius:11%;
-  color: white;
+  color: var(--bg-content-color);
   padding: 5px 10px;
   text-decoration: none;
   font-weight: 700;
@@ -343,7 +328,7 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
 
 .icon-calc {
   padding-top: 4%;
-  color: #9932e2;
+  color: var(--third-color-darker);
 }
 
 #contato {
@@ -353,22 +338,14 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
   padding: 3vw;
   width: 80vw;
   border-radius: 2vw;
-  background-color: white; 
+  background-color: var(--bg-content-color); 
   transition: all 0.5s;
 }
 
 #contato:hover {
   cursor: pointer;
-  box-shadow: 14px 14px 23px #cacaca,
-  -14px -14px 23px #f6f6f6;
-}
-
-.title-contact {
-  font-size: 38px;
-  font-weight: 700;
-  align-items: center;
-  padding-left: 8%;
-  color:#B06CE0
+  box-shadow: 14px 14px 23px var(--boxshadow-color-first),
+  -14px -14px 23px var(--boxshadow-color-second);
 }
 
 .sub-contact {
@@ -380,7 +357,8 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
 .link-socialmedias {
   display: flex;
   max-width: 40%;
-  justify-content: space-evenly;
+  gap: 2rem;
+  padding-left: 8%;
   margin-top: 20px;
 }
 
@@ -391,18 +369,18 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
 .sub-form {
   font-family: "Cormorant Garamond", serif;
   font-size: 25px;
-  padding-left: 8%;
+  padding-left: 9%;
 }
 
 .form input, .form textarea {
   width: 90%;
-  margin-left: 10%;
+  margin-left: 9%;
   padding: 15px;
   outline: none;
   margin-top: 8px;
   border: none;
   border-radius: 6px;
-  background-color: #f1f0f3;
+  background-color: var(--first-color);
 }
 
 .form input::placeholder, .form textarea::placeholder {
@@ -417,8 +395,8 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
 }
 
 .sub-btn {
-  background-color: #B06CE0;
-  color: white;
+  background-color: var(--third-color);
+  color: var(--bg-content-color);
   font-family: "Cormorant Garamond", serif;
   font-size: 20px;
   padding: 10px 15px;
@@ -431,11 +409,159 @@ background: linear-gradient(0deg, rgba(210,196,223,1) 0%, rgba(241,240,243,1) 69
 }
 
 footer {
-  background-color: #d2c4df;
+  background-color: var(--first-color);
   margin-top: 5%;
   padding-bottom: 2%;
   text-align: center;
   position: relative;
   font-weight: bold;
   font-size: 25px
+}
+
+.mobile-menu {
+  display: none;
+  cursor: pointer;
+}
+
+.mobile-menu div {
+  width: 32px;
+  height: 2px;
+  background: var(--third-color);
+  margin: 8px;
+  transition: 0.3s;
+}
+
+@media (max-width: 999px) {
+  body {
+    overflow-x: hidden;
+  }
+  
+  .nav-list {
+    position: absolute;
+    top: 7vh;
+    right: 0;
+    width: 50vw;
+    height: 92vh;
+    background: var(--second-color);
+    flex-direction: column;
+    align-items: center;
+    gap: 7rem;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
+  }
+
+  .nav-list li {
+    margin-top: 6vh;
+    margin-left: 0;
+    opacity: 0;
+  }
+
+  .tittle {
+    font-size: 28px;
+  }
+
+  .mobile-menu {
+    display: block;
+  }
+
+  .nav-list.active {
+    transform: translateX(0);
+  }
+
+  header {
+    height: 5rem;
+  }
+
+  #resume {
+    padding: 0 2rem;
+  }
+
+  .left-about {
+    margin-top: 15vh;
+  }
+
+  .little-text {
+    font-size: 22px;
+  }
+
+  .name {
+    font-size: 50px;
+  }
+
+  .right-about {
+    display: none;
+  }
+
+  .contact-icon {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .p-resume {
+    font-size: 20px;
+  }
+
+  #about {
+    margin-top: 5vh;
+  } 
+
+  .title-content {
+    font-size: 28px;
+  }
+
+  .p-about {
+    font-size: 20px;
+  }
+
+  .sub-title {
+    font-size: 20px;
+  }
+
+  .p-skills {
+    font-size: 15px;
+  }
+
+  .projeto-calc {
+    margin-left: 5vw;
+    width: revert;
+  }
+  
+  .subt-project {
+    font-size: 28px;
+  }
+
+  .sub-contact {
+    font-size: 25px;
+  }
+
+  .btn-form {
+    justify-content: center;
+  }
+
+  footer {
+    font-size: 20px;
+  }
+
+  @keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+  .mobile-menu.active .line1 {
+    transform: rotate(-45deg) translate(-8px, 8px);
+  }
+  
+  .mobile-menu.active .line2 {
+    opacity: 0;
+  }
+  
+  .mobile-menu.active .line3 {
+    transform: rotate(45deg) translate(-5px, -7px);
+  }
 }
